--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,21 @@
         height: 420px;
     }
 
+    .register-form{
+        font-family: Arial, Helvetica, sans-serif;
+        color: #1d3454;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: white;
+        border-radius: 15px;
+        -webkit-box-shadow: -1px 11px 52px -20px rgba(0,0,0,0.64);
+        -moz-box-shadow: -1px 11px 52px -20px rgba(0,0,0,0.64);
+        box-shadow: -1px 11px 52px -20px rgba(0,0,0,0.64);
+        margin: 0 10vw;
+        height: 700px;
+    }
+
 
     .subtitle{
         margin: 30px 0px;
@@ -59,6 +74,15 @@
         width: 50vw;
     }
 
+    .register-form input{
+        border-radius: 8px;
+        border: none;
+        outline: 1px solid #457b9d;
+        height: 40px;
+        width: 50vw;
+        margin-bottom: 20px;
+    }
+
 
     .contra p{
         font-size: smaller;
@@ -71,7 +95,21 @@
         column-gap: 15px;
     }
 
+    .register-buttons-container{
+        display: flex;
+        margin: 15px 0px;
+        justify-content: space-evenly;
+        column-gap: 15px;
+    }
+
     .buttons button{
+        border: none;
+        height: 44px;
+        font-size: medium;
+        padding: 10px;
+    }
+
+    .register-buttons-container button{
         border: none;
         height: 44px;
         font-size: medium;
@@ -84,14 +122,33 @@
         border-radius: 12px;
     }
 
+    .register-login-btn{
+        background-color: white;
+        color: #457b9d;
+        border-radius: 12px;
+    }
+
     .register-btn{
         background-color: white;
         color: #457b9d;
         border-radius: 12px;
     }
 
+    .register-register-btn{
+        background-color: #457b9d;
+        color: white;
+        border-radius: 12px;
+    }
+
     .recover-password{
         margin-bottom: 20px;
+        text-decoration: none;
+        color: #457b9d;
+    }
+
+    .register-recover-password{
+        margin-bottom: 20px;
+        margin-top: 20px;
         text-decoration: none;
         color: #457b9d;
     }
@@ -156,6 +213,21 @@
         margin: 0 10vw;
     }
 
+    .register-form{
+        font-family: Arial, Helvetica, sans-serif;
+        color: #1d3454;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: white;
+        border-radius: 15px;
+        -webkit-box-shadow: -1px 11px 52px -20px rgba(0,0,0,0.64);
+        -moz-box-shadow: -1px 11px 52px -20px rgba(0,0,0,0.64);
+        box-shadow: -1px 11px 52px -20px rgba(0,0,0,0.64);
+        margin: 0 10vw;
+        height: 700px;
+    }
+
 
     .subtitle{
         margin: 30px 0px;
@@ -177,6 +249,15 @@
         width: 50vw;
     }
 
+    .register-form input{
+        border-radius: 8px;
+        border: none;
+        outline: 1px solid #457b9d;
+        height: 40px;
+        width: 50vw;
+        margin-bottom: 20px;
+    }
+
 
     .contra p{
         font-size: smaller;
@@ -189,6 +270,13 @@
         column-gap: 25px;
     }
 
+    .register-buttons-container{
+        display: flex;
+        margin: 15px 0px;
+        justify-content: space-evenly;
+        column-gap: 9vw;
+    }
+
     .buttons button{
         border: none;
         height: 44px;
@@ -197,9 +285,23 @@
         width: 10vw;
     }
 
+    .register-buttons-container button{
+        border: none;
+        height: 44px;
+        font-size: medium;
+        padding: 10px;
+        width: 15vw;
+    }
+
     .login-btn{
         background-color: #457b9d;
         color: white;
+        border-radius: 12px;
+    }
+
+    .register-login-btn{
+        background-color: white;
+        color: #457b9d;
         border-radius: 12px;
     }
 
@@ -209,8 +311,21 @@
         border-radius: 12px;
     }
 
+    .register-register-btn{
+        background-color: #457b9d;
+        color: white;
+        border-radius: 12px;
+    }
+
     .recover-password{
         margin-bottom: 20px;
+        text-decoration: none;
+        color: #457b9d;
+    }
+
+    .register-recover-password{
+        margin-bottom: 20px;
+        margin-top: 20px;
         text-decoration: none;
         color: #457b9d;
     }
@@ -380,11 +495,17 @@
         column-gap: 60px;
     }
 
+    .register-main{
+        display: flex;
+        justify-content: center;
+        column-gap: 60px;
+    }
+
     .img-container{
         border-radius: 15px;
         display: block;
         width: 30vw;
-        height: 70vh;
+        height: 82vh;
         -webkit-box-shadow: -1px 11px 52px -20px rgba(0,0,0,0.64);
         -moz-box-shadow: -1px 11px 52px -20px rgba(0,0,0,0.64);
         box-shadow: -1px 11px 52px -20px rgba(0,0,0,0.64);
@@ -418,10 +539,32 @@
         width: 30vw;
         height: 70vh;
     }
-
+    
+    .register-form{
+        font-family: Arial, Helvetica, sans-serif;
+        color: #1d3454;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: white;
+        border-radius: 15px;
+        -webkit-box-shadow: -1px 11px 52px -20px rgba(0,0,0,0.64);
+        -moz-box-shadow: -1px 11px 52px -20px rgba(0,0,0,0.64);
+        box-shadow: -1px 11px 52px -20px rgba(0,0,0,0.64);
+        margin: 0;
+        width: 40vw;
+        height: 82vh;
+    }
 
     .subtitle{
         margin: 30px 0px;
+    }
+
+    .user-email-container,
+    .password-confirm-password-container,
+    .name-lastname-container{
+        display: flex;
+        column-gap: 25px;
     }
 
     .correo p{
@@ -440,6 +583,14 @@
         width: 22vw;
     }
 
+    .register-form input{
+        border-radius: 8px;
+        border: none;
+        outline: 1px solid #457b9d;
+        height: 50px;
+        width: 15vw;
+    }
+
 
     .contra p{
         font-size: smaller;
@@ -449,7 +600,14 @@
         display: flex;
         margin: 40px 0px;
         justify-content: space-evenly;
-        column-gap: 25px;
+        column-gap: 10px;
+    }
+
+    .register-buttons-container{
+        display: flex;
+        margin: 25px 0px;
+        justify-content: space-evenly;
+        column-gap: 10px;
     }
 
     .buttons button{
@@ -476,7 +634,7 @@
         border-radius: 12px;
     }
 
-    .register-btn:hover{
+    .register-btn:hover, .register-login-btn:hover{
         outline: 1px solid #457b9d;
     }
 
